making Employee serializable  and emplist file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /FinalProject_Employee/Employee/nbproject/private/
 /FinalProject_Employee/EmployeeApp/nbproject/private/
+/FinalProject_Employee/EmployeeApp/build/
